--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "This is an example of a full stack web application.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "serve": "nodemon server.js"
+
+    
   },
   "repository": {
     "type": "git",
     "url": "(https://github.com/JhonivanJavier/4_1_ji_javier_web.git)"
   },
   "author": "Jhon Ivan Javier",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
+  }
 }
